Revert "Pull Request: Implementação de Padrões de Projeto e Estruturas em Ordem de Serviço (OS)"